--- a/template/index.html
+++ b/template/index.html
@@ -169,19 +169,19 @@
                         <li class="nav-item dropdown">
                           <a class="section-btn nav-link dropdown-toggle" data-toggle="dropdown" href="#">Tecnologias</a>
                           <ul class="dropdown-menu">
-                            <li><a href="page-tech-visao-computacional.html">Visão computacional</a></li>
-                            <li><a href="page-tech-inteligencia-artificial.html">Inteligência artificial</a></li>
-                            <li><a href="page-tech-cameras-hiperespectrais.html">Câmeras hiperespectrais</a></li>
+                            <li><a href="page-tech-visao-computacional.html">Visão Computacional</a></li>
+                            <li><a href="page-tech-inteligencia-artificial.html">Inteligência Artificial</a></li>
+                            <li><a href="page-tech-cameras-hiperespectrais.html">Câmeras Hiperespectrais</a></li>
                           </ul>
                         </li>
                         <!-- cases -->
                         <li class="nav-item dropdown">
                           <a class="section-btn nav-link dropdown-toggle" data-toggle="dropdown" href="#">Cases</a>
                           <ul class="dropdown-menu">
-                            <li><a href="page-case-calibradora.html">Calibradora eletrônica de tomates</a></li>
-                            <li><a href="page-case-seletora-mudas-eucalipto.html">Seletora de mudas de eucalipto</a></li>
-                            <li><a href="page-case-seletora-mudas-flores.html">Seletora de mudas de flores</a></li>
-                            <li><a href="page-case-sistema-qualificacao-uvas.html">Sistema de qualificação de uvas</a></li>
+                            <li><a href="page-case-calibradora.html">Calibradora Eletrônica de Tomates</a></li>
+                            <li><a href="page-case-seletora-mudas-eucalipto.html">Seletora Automática de Mudas de Eucalipto</a></li>
+                            <li><a href="page-case-seletora-mudas-flores.html">Seletora Automática de Mudas de Flores</a></li>
+                            <li><a href="page-case-sistema-qualificacao-uvas.html">Sistema Automático de Qualificação de Uvas</a></li>
                           </ul>
                         </li>
                         <!-- media -->
@@ -432,7 +432,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-6 text-justify mb-30">
-              <h3 class="page-title title-about">Sobre a MVISIA</h3>
+              <h3 class="page-title title-about mb-30">Sobre a MVISIA</h3>
               <p>A MVISIA desenvolve <strong>máquinas e sistemas baseados em visão computacional e inteligência artificial</strong> para determinar o índice de qualidade de produtos agrícolas.</p>
               <p>Trazemos <strong>eficiência, redução de custos e aumento de qualidade</strong> para sistemas de produção da <strong>agroindústria</strong>, utilizando <strong>visão computacional e inteligência artificial.</strong></p>
               <a class="btn btn-transparent btn-hvr btn-animated btn-bordered-green" href="page-about.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
@@ -493,79 +493,75 @@
 
       <!-- section cases start -->
       <div class="section mt-30">
-        <div class="container pv-30">
+        <div class="container mt-30">
           <div class="row"> 
             <div class="main col-md-12">
             <h2 class="page-title text-center">Cases de Sucesso</h2>
             <div class="separator"></div>
-              <div class="row pv-30">
+              <div class="row pv-55">
                 <!-- tomate -->
                 <div class="col-sm-3">
-                  <div class="image-box style-2 mb-20 bordered dark-bg text-center" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                    <div class="overlay-container border-clear">
-                      <img class="img-container" src="images/case-1.jpg" alt="calibradora">
-                      <!--<div class="overlay-to-top">
-                        <p class="small margin-clear">Velocidade de 3600 mudas por hora</p>
-                      </div>-->
+                  <a href="page-case-calibradora.html">
+                    <div class="image-box style-2 mb-20 bordered text-center dark-bg" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                      <div class="overlay-container border-clear">
+                        <img class="img-container" src="images/case-1.jpg" alt="calibradora">
+                      </div>
+                      <div class="body mt-10">
+                        <h4 class="card-title text-white">Tomate</h4>
+                        <div class="separator"></div>
+                        <p class="subtitle text-white ph-20">Calibradora Eletrônica<br> de Tomates Miúdos</p>
+                        <a class="btn btn-transparent btn-animated btn-bordered-white" href="page-case-calibradora.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
+                      </div>
                     </div>
-                    <div class="body">
-                      <h3 class="card-title text-white">Tomate</h3>
-                      <div class="separator"></div>
-                      <p>Calibradora eletrônica de<br> tomates miúdos</p>
-                      <a class="btn btn-transparent btn-animated btn-bordered-white" href="page-case-calibradora.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
-                    </div>
-                  </div>
+                  </a>
                 </div>
                 <!-- uva -->
                 <div class="col-sm-3">
-                  <div class="image-box style-2 mb-20 bordered dark-bg text-center" data-animation-effect="fadeInDownSmall" data-effect-delay="200">
-                    <div class="overlay-container border-clear">
-                      <img class="img-container" src="images/case-2.jpg" alt="qualificacao-uvas">
-                      <!--<div class="overlay-to-top">
-                        <p class="small margin-clear">Velocidade de 3600 mudas por hora</p>
-                      </div>-->
+                  <a href="page-case-sistema-qualificacao-uvas.html">
+                    <div class="image-box style-2 mb-20 bordered text-center dark-bg" data-animation-effect="fadeInDownSmall" data-effect-delay="200">
+                      <div class="overlay-container border-clear">
+                        <img class="img-container" src="images/case-2.jpg" alt="qualificacao-uvas">
+                      </div>
+                      <div class="body mt-10">
+                        <h4 class="card-title text-white">Uva</h4>
+                        <div class="separator"></div>
+                        <p class="subtitle text-white ph-20">Sistema Automático de<br> Qualificação de Uvas</p>
+                        <a class="btn btn-transparent btn-animated btn-bordered-white" href="page-case-sistema-qualificacao-uvas.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
+                      </div>
                     </div>
-                    <div class="body">
-                      <h3 class="card-title text-white">Uva</h3>
-                      <div class="separator"></div>
-                      <p>Sistema automático de<br> qualificação de uvas</p>
-                      <a class="btn btn-transparent btn-animated btn-bordered-white" href="page-case-sistema-qualificacao-uvas.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
-                    </div>
-                  </div>
+                  </a>
                 </div>
                 <!-- eucalipto -->
                 <div class="col-sm-3">
-                  <div class="image-box style-2 mb-20 bordered dark-bg text-center" data-animation-effect="fadeInDownSmall" data-effect-delay="300">
-                    <div class="overlay-container border-clear">
-                        <img class="img-container" src="images/case-3.jpg" alt="seletora-eucalipto">
-                      <!--<div class="overlay-to-top">
-                        <p class="small margin-clear">Velocidade de 3600 mudas por hora</p>
-                      </div>-->
+                  <a href="page-case-seletora-mudas-eucalipto.html">
+                    <div class="image-box style-2 mb-20 bordered text-center dark-bg" data-animation-effect="fadeInDownSmall" data-effect-delay="300">
+                      <div class="overlay-container border-clear">
+                          <img class="img-container" src="images/case-3.jpg" alt="seletora-eucalipto">
+                      </div>
+                      <div class="body mt-10">
+                        <h4 class="card-title text-white">Eucalipto</h4>
+                        <div class="separator"></div>
+                        <p class="subtitle text-white ph-20">Seletora Automática de Mudas de Eucalipto</p>
+                        <a class="btn btn-transparent btn-animated btn-bordered-white" href="page-case-seletora-mudas-eucalipto.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
+                      </div>
                     </div>
-                    <div class="body">
-                      <h3 class="card-title text-white">Eucalipto</h3>
-                      <div class="separator"></div>
-                      <p>Seletora automática de<br> mudas de eucalipto</p>
-                      <a class="btn btn-transparent btn-animated btn-bordered-white" href="page-case-seletora-mudas-eucalipto.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
-                    </div>
-                  </div>
+                  </a>
                 </div>
                 <!--flores -->
                 <div class="col-sm-3">
-                  <div class="image-box style-2 mb-20 bordered dark-bg text-center" data-animation-effect="fadeInDownSmall" data-effect-delay="400">
-                    <div class="overlay-container border-clear">
-                        <img class="img-container" src="images/case-4.jpg" alt="seletora-flores">
-                      <!--<div class="overlay-to-top">
-                        <p class="small margin-clear">Velocidade de 3600 mudas por hora</p>
-                      </div>-->
+                  <a href="page-case-seletora-mudas-flores.html">
+                    <div class="image-box style-2 mb-20 bordered text-center dark-bg" data-animation-effect="fadeInDownSmall" data-effect-delay="400">
+                      <div class="overlay-container border-clear">
+                          <img class="img-container" src="images/case-4.jpg" alt="seletora-flores">
+                      </div>
+                      <div class="body mt-10">
+                        <h4 class="card-title text-white">Flores</h4>
+                        <div class="separator"></div>
+                        <p class="subtitle text-white ph-20">Seletora Automática de Mudas de Flores</p>
+                        <a class="btn btn-transparent btn-animated btn-bordered-white" href="page-case-seletora-mudas-flores.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
+                      </div>
                     </div>
-                    <div class="body">
-                      <h3 class="card-title text-white">Flores</h3>
-                      <div class="separator"></div>
-                      <p>Seletora automática de<br> mudas de flores</p>
-                      <a class="btn btn-transparent btn-animated btn-bordered-white" href="page-case-seletora-mudas-flores.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
-                    </div>
-                  </div>
+                  </a>
                 </div>
               </div>
             </div>
@@ -669,22 +665,24 @@
         <div class="container pv-30">
           <h2 class="page-title text-center">Clientes</h2>
           <div class="separator"></div>
-          <div class="clients-container">
-            <div class="clients">
-              <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="100">
-                <a target="_blank" href="http://www.suzano.com.br/"><img src="images/client-1.svg" alt="suzano-logo"></a>
-              </div>
-              <div class="client-image-small object-non-visible" data-animation-effect="fadeIn" data-effect-delay="200">
-                <a target="_blank" href="http://www.cooperativasaojoao.com.br/index2.html"><img src="images/client-2.svg" alt="cooperativa-sao-joao-logo"></a>
-              </div>
-              <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="300">
-                <a target="_blank" href="http://www.kiarafoods.com.br/"><img src="images/client-3.svg" alt="kiara-foods-logo"></a>
-              </div>
-              <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="400">
-                <a target="_blank" href="http://www.echeveria.com.br/"><img src="images/client-4.svg" alt="echeverria-logo"></a>
-              </div>
-              <div class="client-image-small object-non-visible" data-animation-effect="fadeIn" data-effect-delay="500">
-                <a target="_blank" href="http://devtecnologia.com.br/"><img src="images/client-5.svg" alt="dev-tecnologia-logo"></a>
+          <div class="clients-container mb-30">
+              <div class="clients">
+                <div class="gallery-slider">
+                  <div class="item client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="100">
+                    <a target="_blank" href="http://www.suzano.com.br/"><img src="images/client-1.svg" alt="suzano-logo"></a>
+                  </div>
+                  <div class="item client-image-small object-non-visible" data-animation-effect="fadeIn" data-effect-delay="200">
+                    <a target="_blank" href="http://www.cooperativasaojoao.com.br/index2.html"><img src="images/client-2.svg" alt="cooperativa-sao-joao-logo"></a>
+                  </div>
+                  <div class="item client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="300">
+                    <a target="_blank" href="http://www.kiarafoods.com.br/"><img src="images/client-3.svg" alt="kiara-foods-logo"></a>
+                  </div>
+                  <div class="item client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="400">
+                    <a target="_blank" href="http://www.echeveria.com.br/"><img src="images/client-4.svg" alt="echeverria-logo"></a>
+                  </div>
+                  <div class="item client-image-small object-non-visible" data-animation-effect="fadeIn" data-effect-delay="500">
+                    <a target="_blank" href="http://devtecnologia.com.br/"><img src="images/client-5.svg" alt="dev-tecnologia-logo"></a>
+                  </div>
               </div>
             </div>
           </div>
@@ -693,28 +691,31 @@
           <!-- section partners start -->
           <h2 class="page-title text-center">Parceiros</h2>
           <div class="separator"></div>
-          <div class="clients-container">
-            <div class="clients">
-              <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="100">
-                <a target="_blank" href="https://www.embrapa.br/"><img src="images/partner-1.svg" alt="embrapa-logo"></a>
-              </div>
-              <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="200">
-                <a target="_blank" href="http://www.fapesp.br/"><img src="images/partner-2.svg" alt="fapesp-logo"></a>
-              </div>
-              <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="300">
-                <a target="_blank" href="http://abria.com.br/"><img src="images/partner-3.svg" alt="abria-logo"></a>
-              </div>
-              <div class="client-image-small object-non-visible" data-animation-effect="fadeIn" data-effect-delay="400">
-                <a target="_blank" href="http://www5.usp.br/"><img src="images/partner-4.svg" alt="usp-logo"></a>
-              </div>
-              <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="500">
-                <a target="_blank" href="http://www.cietec.org.br/"><img src="images/partner-5.svg" alt="cietec-logo"></a>
+          <div class="clients-container mb-30">
+              <div class="clients">
+                <div class="gallery-slider">
+                  <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="100">
+                    <a target="_blank" href="https://www.embrapa.br/"><img src="images/partner-1.svg" alt="embrapa-logo"></a>
+                  </div>
+                  <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="200">
+                    <a target="_blank" href="http://www.fapesp.br/"><img src="images/partner-2.svg" alt="fapesp-logo"></a>
+                  </div>
+                  <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="400">
+                    <a target="_blank" href="http://abria.com.br/"><img src="images/partner-3.svg" alt="abria-logo"></a>
+                  </div>
+                  <div class="client-image-small object-non-visible" data-animation-effect="fadeIn" data-effect-delay="300">
+                    <a target="_blank" href="http://www5.usp.br/"><img src="images/partner-4.svg" alt="usp-logo"></a>
+                  </div>
+                  <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="500">
+                    <a target="_blank" href="http://www.cietec.org.br/"><img src="images/partner-5.svg" alt="cietec-logo"></a>
+                  </div>
               </div>
             </div>
           </div>
+          <!-- section partners end -->
+
         </div>
       </div>
-      <!-- section partners end -->
 
       <!-- section media start -->     
       <div class="section dark-translucent-bg pv-55 clearfix" style="background-image:url(images/tech-bg-image.jpg)">
@@ -936,6 +937,8 @@
     <script type="text/javascript" src="plugins/owlcarousel2/owl.carousel.min.js"></script>
     <!-- Pace javascript -->
     <script type="text/javascript" src="plugins/pace/pace.min.js"></script>
+    <!-- Automatic Gallery -->
+    <script type="text/javascript" src="plugins/slick.min.js"></script>
     <!-- Initialization of Plugins -->
     <script type="text/javascript" src="js/template.js"></script>
     <!-- Google Maps javascript -->
