--- a/template/page-case-seletora-mudas-eucalipto.html
+++ b/template/page-case-seletora-mudas-eucalipto.html
@@ -169,19 +169,19 @@
                         <li class="nav-item dropdown">
                           <a class="section-btn nav-link dropdown-toggle" data-toggle="dropdown" href="#">Tecnologias</a>
                           <ul class="dropdown-menu">
-                            <li><a href="page-tech-visao-computacional.html">Visão computacional</a></li>
-                            <li><a href="page-tech-inteligencia-artificial.html">Inteligência artificial</a></li>
-                            <li><a href="page-tech-cameras-hiperespectrais.html">Câmeras hiperespectrais</a></li>
+                            <li><a href="page-tech-visao-computacional.html">Visão Computacional</a></li>
+                            <li><a href="page-tech-inteligencia-artificial.html">Inteligência Artificial</a></li>
+                            <li><a href="page-tech-cameras-hiperespectrais.html">Câmeras Hiperespectrais</a></li>
                           </ul>
                         </li>
                         <!-- cases -->
                         <li class="nav-item dropdown">
                           <a class="section-btn nav-link dropdown-toggle" data-toggle="dropdown" href="#">Cases</a>
                           <ul class="dropdown-menu">
-                            <li><a href="page-case-calibradora.html">Calibradora eletrônica de tomates</a></li>
-                            <li><a href="page-case-seletora-mudas-eucalipto.html">Seletora de mudas de eucalipto</a></li>
-                            <li><a href="page-case-seletora-mudas-flores.html">Seletora de mudas de flores</a></li>
-                            <li><a href="page-case-sistema-qualificacao-uvas.html">Sistema de qualificação de uvas</a></li>
+                            <li><a href="page-case-calibradora.html">Calibradora Eletrônica de Tomates</a></li>
+                            <li><a href="page-case-seletora-mudas-eucalipto.html">Seletora Automática de Mudas de Eucalipto</a></li>
+                            <li><a href="page-case-seletora-mudas-flores.html">Seletora Automática de Mudas de Flores</a></li>
+                            <li><a href="page-case-sistema-qualificacao-uvas.html">Sistema Automático de Qualificação de Uvas</a></li>
                           </ul>
                         </li>
                         <!-- media -->
@@ -216,7 +216,7 @@
         <div class="container">
           <div class="row justify-content-lg-center">
             <div class="col-lg-8 text-center pv-20">
-              <h2 class="title">Seletora automática de<br> mudas de eucalipto</h2>
+              <h2 class="title">Seletora Automática de<br> Mudas de Eucalipto</h2>
               <div class="separator"></div>
             </div>
           </div>
@@ -234,7 +234,7 @@
             <div class="row">
               <div class="col-lg-6 text-justify mb-30">
                 <p>Nossa seletora automática classifica as mudas de eucalipto em até 6 categorias, utilizando parâmetros como altura, diâmetro do coleto, número de folhas, coloração e presença de doenças, trazendo um rígido controle de qualidade sobre a produção do viveirista.</p>
-                <p>Nossas máquinas contam com um <strong>avançado sistema de visão computacional</strong>, desenvolvido com as mais modernas técnicas de processamento de imagem e câmeras industriais, o que garante uma classificação rápida e precisa, chegando a classificar até <strong>2.200 mudas por hora.</strong></p>
+                <p>Nossas máquinas contam com um <strong>avançado sistema de visão computacional</strong>, desenvolvido com as mais modernas técnicas de processamento de imagem e câmeras industriais, o que garante uma classificação rápida e precisa, chegando a classificar até <strong>2.400 mudas por hora.</strong></p>
               </div>
               <div class="col-lg-6">
                 <div class="special-container">
@@ -271,45 +271,40 @@
         </div>
         <!-- section video end -->
 
-                <!-- section how works start -->
+        <!-- section how works start -->
         <div class="mt-20 pv-70 ph-20 section">
           <div class="container">
             <h3 class="title-subsection">Como funciona</h3>
             <div class="separator-2"></div> 
             <div class="row mt-60">
-              <!--<div class="col-lg-6 col-md-6 m-auto">
-                <img class="main-img-case mt-20 mb-20" src="images/main-img-case-1.svg">
-              </div>-->
-              <div class="col-lg-3 col-md-3">
+              <div class="col-lg-6 col-md-6 m-auto">
+                <img class="main-img-case mt-20 mb-20" src="images/main-img-case-4.svg">
+              </div>
+            <div class="col-lg-6 col-md-6">
+              <div class="row">
                 <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                   <h4 class="how-works-title">01. Alimentação</h4>
                   <div class="separator-2 clearfix"></div>
-                  <p class="how-works-text">Um operador coloca as muda em suportes especialmente desenvolvidos para este equipamento, todo processo posterior é feito automaticamente.</p>
+                  <p class="how-works-text text-justify">Um operador coloca as mudas em suportes especialmente desenvolvidos para este equipamento. Todo processo posterior é feito automaticamente.</p>
                 </div>
               </div>
-              <div class="col-lg-3 col-md-3">
+              <div class="row">
                 <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                  <h4 class="how-works-title">02. Imagem</h4>
+                  <h4 class="how-works-title">02. Classificação</h4>
                   <div class="separator-2 clearfix"></div>
-                  <p class="how-works-text">Após a singularização das mudas na esteira, a seletora captura uma foto de cada muda.</p>
+                  <p class="how-works-text text-justify">Após a singularização das mudas na esteira, a seletora captura uma foto de cada muda e a análise das imagens é feita pelo software de Inteligência Artificial.</p>
                 </div>
               </div>
-              <div class="col-lg-3 col-md-3">
+              <div class="row">
                 <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                  <h4 class="how-works-title">03. Classificação</h4>
+                  <h4 class="how-works-title">03. Separação</h4>
                   <div class="separator-2 clearfix"></div>
-                  <p class="how-works-text">A seletora avalia os parâmetros de interesse de cada muda, definidos pelo operador. Uma vez definida a classe da muda, ela é empurrada para seu respectivo compartimento.</p>
-                </div>
-              </div>
-              <div class="col-lg-3 col-md-3">
-                <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                  <h4 class="how-works-title">04. Configuração</h4>
-                  <div class="separator-2 clearfix"></div>
-                  <p class="how-works-text">Os critérios de seleção são totalmente personalizáveis, o que garante uma padronização de acordo com as necessidades de cada produtor.</p>
+                  <p class="how-works-text text-justify">A seletora avalia os parâmetros de interesse de cada muda, definidos pelo operador. Uma vez definida a classe da muda, ela é empurrada para seu respectivo compartimento.</p>
                 </div>
               </div>
             </div>
           </div>
+        </div>
         </div>
         <!-- section how works end -->
 
@@ -374,11 +369,12 @@
           <div class="separator-2"></div>        
           <div class="col-md-12">
             <ul>
-              <li class="mt-30"><i class="fa fa-angle-right icon-angle-green"></i>Produtividade de até 2.200 mudas/hora;</li>
-              <li class="mt-10"><i class="fa fa-angle-right icon-angle-green"></i>Até 6 classes de seleção;</li>
-              <li class="mt-10"><i class="fa fa-angle-right icon-angle-green"></i>Alimentação 220 V;</li>
+              <li class="mt-30"><i class="fa fa-angle-right icon-angle-green"></i>Velocidade de até 2.400 mudas/hora;</li>
+              <li class="mt-10"><i class="fa fa-angle-right icon-angle-green"></i>5 classificações + 1 refugo;</li>
+              <li class="mt-10"><i class="fa fa-angle-right icon-angle-green"></i>Alimentação 220V-20A;</li>
               <li class="mt-10"><i class="fa fa-angle-right icon-angle-green"></i>É necessário instalar/ter linha de ar comprimido;</li>
-              <li class="mt-10"><i class="fa fa-angle-right icon-angle-green"></i>Dimensões: 6 m (comprimento) x 1 m (largura) x 2 m (altura).</li>
+              <li class="mt-10"><i class="fa fa-angle-right icon-angle-green"></i>Dimensões máximas: 6 m (comprimento) x 2 m (largura) x 2 m (altura);</li>
+              <li class="mt-10"><i class="fa fa-angle-right icon-angle-green"></i>Garantia de 12 meses.</li>
             </ul>
           </div>
         </div>
@@ -390,9 +386,9 @@
           <div class="container">
             <h3 class="title-subsection">Veja outros cases</h3>
             <div class="separator-2 mb-30"></div>   
-            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-sistema-qualificacao-uvas.html">Sistema automático de qualificação de uvas<i class="fa fa-angle-double-right"></i></a>
-            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-calibradora.html">Calibradora eletrônica de tomates miúdos<i class="fa fa-angle-double-right"></i></a>
-            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-seletora-mudas-flores.html">Seletora automática de mudas de flores<i class="fa fa-angle-double-right"></i></a>
+            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-sistema-qualificacao-uvas.html">Sistema Automático de Qualificação de Uvas<i class="fa fa-angle-double-right"></i></a>
+            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-calibradora.html">Calibradora Eletrônica de Tomates Miúdos<i class="fa fa-angle-double-right"></i></a>
+            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-seletora-mudas-flores.html">Seletora Automática de Mudas de Flores<i class="fa fa-angle-double-right"></i></a>
           </div>
         </div>
       <!-- section others end -->
