--- a/template/page-tech-cameras-hiperespectrais.html
+++ b/template/page-tech-cameras-hiperespectrais.html
@@ -169,19 +169,19 @@
                         <li class="nav-item dropdown">
                           <a class="section-btn nav-link dropdown-toggle" data-toggle="dropdown" href="#">Tecnologias</a>
                           <ul class="dropdown-menu">
-                            <li><a href="page-tech-visao-computacional.html">Visão computacional</a></li>
-                            <li><a href="page-tech-inteligencia-artificial.html">Inteligência artificial</a></li>
-                            <li><a href="page-tech-cameras-hiperespectrais.html">Câmeras hiperespectrais</a></li>
+                            <li><a href="page-tech-visao-computacional.html">Visão Computacional</a></li>
+                            <li><a href="page-tech-inteligencia-artificial.html">Inteligência Artificial</a></li>
+                            <li><a href="page-tech-cameras-hiperespectrais.html">Câmeras Hiperespectrais</a></li>
                           </ul>
                         </li>
                         <!-- cases -->
                         <li class="nav-item dropdown">
                           <a class="section-btn nav-link dropdown-toggle" data-toggle="dropdown" href="#">Cases</a>
                           <ul class="dropdown-menu">
-                            <li><a href="page-case-calibradora.html">Calibradora eletrônica de tomates</a></li>
-                            <li><a href="page-case-seletora-mudas-eucalipto.html">Seletora de mudas de eucalipto</a></li>
-                            <li><a href="page-case-seletora-mudas-flores.html">Seletora de mudas de flores</a></li>
-                            <li><a href="page-case-sistema-qualificacao-uvas.html">Sistema de qualificação de uvas</a></li>
+                            <li><a href="page-case-calibradora.html">Calibradora Eletrônica de Tomates</a></li>
+                            <li><a href="page-case-seletora-mudas-eucalipto.html">Seletora Automática de Mudas de Eucalipto</a></li>
+                            <li><a href="page-case-seletora-mudas-flores.html">Seletora Automática de Mudas de Flores</a></li>
+                            <li><a href="page-case-sistema-qualificacao-uvas.html">Sistema Automático de Qualificação de Uvas</a></li>
                           </ul>
                         </li>
                         <!-- media -->
@@ -256,7 +256,7 @@
                 <p>Isso acontece porque câmeras hiperespectrais conseguem observar e interpretar muito mais informações sobre as interações entre a luz e o seu braço do que os seus olhos ou câmeras comuns. Enquanto olhos e câmeras comuns são capazes apenas de enxergar alguns comprimentos de luz e espectros, câmeras hiperespectrais são dotadas de tecnologia capaz de observar centenas de milhares de espectros de luz de um mesmo objeto ou material. Dessa forma, elas conseguem até mesmo distinguir a composição química dos materiais ou objetos analisados.</p>
                 <p>Essa capacidade visual inigualável das câmeras hiperespectrais traz óbvias vantagens a diversos setores da sociedade – como é o caso do <strong>setor agrícola.</strong></p>
                 <p>Um produtor de tomate que usa a tecnologia hiperespectral consegue identificar a ausência de nutrientes em seus tomates logo no início do processo, sendo possível, assim,  corrigir uma colheita aquém do ideal. Um produtor de eucaliptos que usa máquinas com câmeras hiperespectrais vai conseguir identificar o estado de saúde e a presença de doenças já nas mudas da planta.</p>
-                <p>Ao permitir que o produtor tenha acesso a informações muito mais precisas sobre os seus produtos, a tecnologia hiperespectral antecipa problemas e soluções e garante o aumento da eficiência e da qualidade do produto final.</p>
+                <p>Ao permitir que o produtor tenha acesso a informações muito mais precisas sobre os seus produtos, a tecnologia hiperespectral antecipa problemas e garante o aumento da eficiência e da qualidade do produto final.</p>
               </div>
             </div>
           </div>
@@ -268,7 +268,7 @@
           <div class="container">
             <div class="row">      
               <div class="col-md-12 text-justify mt-10">
-                <p><strong>Aqui na MVISIA, trabalhamos com essa tecnologia de ponta nas nossas máquinas para garantir a maior eficiência possível aos nossos clientes. Quer saber mais sobre como podemos aplicar essa tecnologia ao seu negócio? Sinta-se à vontade para entrar em contato conosco e marcar uma reunião!</strong></p>
+                <p><strong>Aqui na MVISIA, trabalhamos com essa tecnologia de ponta nas nossas soluções para garantir a maior eficiência possível aos nossos clientes. Quer saber mais sobre como podemos aplicar essa tecnologia ao seu negócio? Sinta-se à vontade para entrar em contato conosco e marcar uma reunião!</strong></p>
               </div>
             </div>
           </div>
@@ -280,8 +280,8 @@
           <div class="container">
             <h3 class="title-subsection">Veja outras tecnologias</h3>
             <div class="separator-2 mb-30"></div>   
-            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-tech-visao-computacional.html">Visão computacional<i class="fa fa-angle-double-right"></i></a>
-            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-tech-inteligencia-artificial.html">Inteligência artificial<i class="fa fa-angle-double-right"></i></a>
+            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-tech-visao-computacional.html">Visão Computacional<i class="fa fa-angle-double-right"></i></a>
+            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-tech-inteligencia-artificial.html">Inteligência Artificial<i class="fa fa-angle-double-right"></i></a>
           </div>
         </div>
       <!-- section others end -->
