--- a/template/page-case-sistema-qualificacao-uvas.html
+++ b/template/page-case-sistema-qualificacao-uvas.html
@@ -169,19 +169,19 @@
                         <li class="nav-item dropdown">
                           <a class="section-btn nav-link dropdown-toggle" data-toggle="dropdown" href="#">Tecnologias</a>
                           <ul class="dropdown-menu">
-                            <li><a href="page-tech-visao-computacional.html">Visão computacional</a></li>
-                            <li><a href="page-tech-inteligencia-artificial.html">Inteligência artificial</a></li>
-                            <li><a href="page-tech-cameras-hiperespectrais.html">Câmeras hiperespectrais</a></li>
+                            <li><a href="page-tech-visao-computacional.html">Visão Computacional</a></li>
+                            <li><a href="page-tech-inteligencia-artificial.html">Inteligência Artificial</a></li>
+                            <li><a href="page-tech-cameras-hiperespectrais.html">Câmeras Hiperespectrais</a></li>
                           </ul>
                         </li>
                         <!-- cases -->
                         <li class="nav-item dropdown">
                           <a class="section-btn nav-link dropdown-toggle" data-toggle="dropdown" href="#">Cases</a>
                           <ul class="dropdown-menu">
-                            <li><a href="page-case-calibradora.html">Calibradora eletrônica de tomates</a></li>
-                            <li><a href="page-case-seletora-mudas-eucalipto.html">Seletora de mudas de eucalipto</a></li>
-                            <li><a href="page-case-seletora-mudas-flores.html">Seletora de mudas de flores</a></li>
-                            <li><a href="page-case-sistema-qualificacao-uvas.html">Sistema de qualificação de uvas</a></li>
+                            <li><a href="page-case-calibradora.html">Calibradora Eletrônica de Tomates</a></li>
+                            <li><a href="page-case-seletora-mudas-eucalipto.html">Seletora Automática de Mudas de Eucalipto</a></li>
+                            <li><a href="page-case-seletora-mudas-flores.html">Seletora Automática de Mudas de Flores</a></li>
+                            <li><a href="page-case-sistema-qualificacao-uvas.html">Sistema Automático de Qualificação de Uvas</a></li>
                           </ul>
                         </li>
                         <!-- media -->
@@ -209,14 +209,13 @@
       <!-- end copy header -->
 
 <!-- start page -->
-
       <!-- banner start -->
       <!-- ================ -->
       <div class="banner dark-translucent-bg" style="background-image:url('images/page-case-3-banner.jpg'); background-position: 50% 27%;">
         <div class="container">
           <div class="row justify-content-lg-center">
             <div class="col-lg-8 text-center pv-20">
-              <h2 class="title">Sistema automático de qualificação de uvas</h2>
+              <h2 class="title">Sistema Automático de Qualificação de Uvas</h2>
               <div class="separator"></div>
             </div>
           </div>
@@ -276,43 +275,38 @@
             <h3 class="title-subsection">Como funciona</h3>
             <div class="separator-2"></div> 
             <div class="row mt-60">
-              <!--<div class="col-lg-6 col-md-6 m-auto">
-                <img class="main-img-case mt-20 mb-20" src="images/main-img-case-1.svg">
-              </div>-->
-              <div class="col-lg-3 col-md-3">
-                <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                  <h4 class="how-works-title">01. Descarregamento</h4>
+              <div class="col-lg-6 col-md-6 m-auto">
+                <img class="main-img-case mt-20 mb-20" src="images/main-img-case-3.svg">
+              </div>
+            <div class="col-lg-6 col-md-6">
+              <div class="row">
+                <div class="pv-15 ph-20 feature-box w-100 bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                  <h4 class="how-works-title">01. Alimentação</h4>
                   <div class="separator-2 clearfix"></div>
                   <p class="how-works-text text-justify">O caminhão que transporta as uvas é descarregado no lagar.</p>
                 </div>
               </div>
-              <div class="col-lg-3 col-md-3">
-                <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                  <h4 class="how-works-title">02. Imagem</h4>
+              <div class="row">
+                <div class="pv-15 ph-20 feature-box w-100 bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                  <h4 class="how-works-title">02. Aquisição das imagens</h4>
                   <div class="separator-2 clearfix"></div>
                   <p class="how-works-text text-justify">Uma câmera industrial captura imagens do fluxo de uvas que está sendo descarregado.</p>
                 </div>
               </div>
-              <div class="col-lg-3 col-md-3">
-                <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+              <div class="row">
+                <div class="pv-15 ph-20 feature-box w-100 bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                   <h4 class="how-works-title">03. Processamento</h4>
                   <div class="separator-2 clearfix"></div>
-                  <p class="how-works-text text-justify">As imagens são processadas através de um software que analisa parâmetros de maturidade das uvas.</p>
-                </div>
-              </div>
-              <div class="col-lg-3 col-md-3">
-                <div class="pv-15 ph-20 feature-box bordered shadow text-left object-non-visible h-100 mb-10" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                  <h4 class="how-works-title">04. Relatório</h4>
-                  <div class="separator-2 clearfix"></div>
-                  <p class="how-works-text text-justify">O sistema de qualificação finaliza o processo gerando um relatório de qualidade.</p>
+                  <p class="how-works-text text-justify">As imagens são processadas através de um software que analisa parâmetros de maturidade das uvas. Um relatório de qualidade completo é gerado.</p>
                 </div>
               </div>
             </div>
           </div>
         </div>
+        </div>
         <!-- section how works end -->
 
-            <!-- section benefits start -->
+      <!-- section benefits start -->
       <div class="dark-bg pv-70 section">
         <div class="container">
           <div class="row">      
@@ -375,8 +369,8 @@
             <ul>
               <li class="mt-30"><i class="fa fa-angle-right icon-angle-green"></i>Qualifica em até 5 níveis de qualidade.;</li>
               <li class="mt-10"><i class="fa fa-angle-right icon-angle-green"></i>Distância focal de 5mm a 50mm;</li>
-              <li class="mt-10"><i class="fa fa-angle-right icon-angle-green"></i>Garantia de 12 meses;</li>
-              <li class="mt-10"><i class="fa fa-angle-right icon-angle-green"></i>Alimentação 220V.</li>
+              <li class="mt-10"><i class="fa fa-angle-right icon-angle-green"></i>Alimentação 220V;</li>
+              <li class="mt-10"><i class="fa fa-angle-right icon-angle-green"></i>Garantia de 12 meses.</li>
             </ul>
           </div>
         </div>
@@ -388,9 +382,9 @@
           <div class="container">
             <h3 class="title-subsection">Veja outros cases</h3>
             <div class="separator-2 mb-30"></div>   
-            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-calibradora.html">Calibradora eletrônica de tomates miúdos<i class="fa fa-angle-double-right"></i></a>
-            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-seletora-mudas-eucalipto.html">Seletora automática de mudas de eucalipto<i class="fa fa-angle-double-right"></i></a>
-            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-seletora-mudas-flores.html">Seletora automática de mudas de flores<i class="fa fa-angle-double-right"></i></a>
+            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-calibradora.html">Calibradora Eletrônica de Tomates Miúdos<i class="fa fa-angle-double-right"></i></a>
+            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-seletora-mudas-eucalipto.html">Seletora Automática de Mudas de Eucalipto<i class="fa fa-angle-double-right"></i></a>
+            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-seletora-mudas-flores.html">Seletora Automática de Mudas de Flores<i class="fa fa-angle-double-right"></i></a>
           </div>
         </div>
       <!-- section others end -->
