--- a/template/page-tech-inteligencia-artificial.html
+++ b/template/page-tech-inteligencia-artificial.html
@@ -169,19 +169,19 @@
                         <li class="nav-item dropdown">
                           <a class="section-btn nav-link dropdown-toggle" data-toggle="dropdown" href="#">Tecnologias</a>
                           <ul class="dropdown-menu">
-                            <li><a href="page-tech-visao-computacional.html">Visão computacional</a></li>
-                            <li><a href="page-tech-inteligencia-artificial.html">Inteligência artificial</a></li>
-                            <li><a href="page-tech-cameras-hiperespectrais.html">Câmeras hiperespectrais</a></li>
+                            <li><a href="page-tech-visao-computacional.html">Visão Computacional</a></li>
+                            <li><a href="page-tech-inteligencia-artificial.html">Inteligência Artificial</a></li>
+                            <li><a href="page-tech-cameras-hiperespectrais.html">Câmeras Hiperespectrais</a></li>
                           </ul>
                         </li>
                         <!-- cases -->
                         <li class="nav-item dropdown">
                           <a class="section-btn nav-link dropdown-toggle" data-toggle="dropdown" href="#">Cases</a>
                           <ul class="dropdown-menu">
-                            <li><a href="page-case-calibradora.html">Calibradora eletrônica de tomates</a></li>
-                            <li><a href="page-case-seletora-mudas-eucalipto.html">Seletora de mudas de eucalipto</a></li>
-                            <li><a href="page-case-seletora-mudas-flores.html">Seletora de mudas de flores</a></li>
-                            <li><a href="page-case-sistema-qualificacao-uvas.html">Sistema de qualificação de uvas</a></li>
+                            <li><a href="page-case-calibradora.html">Calibradora Eletrônica de Tomates</a></li>
+                            <li><a href="page-case-seletora-mudas-eucalipto.html">Seletora Automática de Mudas de Eucalipto</a></li>
+                            <li><a href="page-case-seletora-mudas-flores.html">Seletora Automática de Mudas de Flores</a></li>
+                            <li><a href="page-case-sistema-qualificacao-uvas.html">Sistema Automático de Qualificação de Uvas</a></li>
                           </ul>
                         </li>
                         <!-- media -->
@@ -216,7 +216,7 @@
         <div class="container">
           <div class="row justify-content-lg-center">
             <div class="col-lg-8 text-center pv-20">
-              <h2 class="title">Inteligência artificial</h2>
+              <h2 class="title">Inteligência Artificial</h2>
               <div class="separator"></div>
             </div>
           </div>
@@ -265,7 +265,7 @@
           <div class="container">
             <div class="row">      
               <div class="col-md-12 text-justify mt-10">
-                <p><strong>Aqui na MVISIA, trabalhamos justamente com tecnologias de inteligência artificial para máquinas de agricultura. Com o auxílio das nossas máquinas inteligentes, produtores têm como resultado o aumento de produtividade, a redução de custos, o acompanhamento da produção por meio de relatórios (controle sobre o processo) e, principalmente, os ganhos na qualidade do produto final. Caso tenha interesse em conhecer mais sobre os nossos produtos e tecnologias, sinta-se à vontade para entrar em contato conosco e marcar uma reunião!</strong></p>
+                <p><strong>Aqui na MVISIA, trabalhamos com tecnologias de inteligência artificial para o agronegócio. Com o auxílio das nossas máquinas inteligentes, produtores têm como resultado o aumento de produtividade, a redução de custos, o acompanhamento da produção por meio de relatórios (controle sobre o processo) e, principalmente, os ganhos na qualidade do produto final. Caso tenha interesse em conhecer mais sobre os nossos produtos e tecnologias, sinta-se à vontade para entrar em contato conosco e marcar uma reunião!</strong></p>
               </div>
             </div>
           </div>
@@ -277,8 +277,8 @@
           <div class="container">
             <h3 class="title-subsection">Veja outras tecnologias</h3>
             <div class="separator-2 mb-30"></div>   
-            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-tech-visao-computacional.html">Visão computacional<i class="fa fa-angle-double-right"></i></a>
-            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-tech-cameras-hiperespectrais.html">Câmeras hiperespectrais<i class="fa fa-angle-double-right"></i></a>
+            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-tech-visao-computacional.html">Visão Computacional<i class="fa fa-angle-double-right"></i></a>
+            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-tech-cameras-hiperespectrais.html">Câmeras Hiperespectrais<i class="fa fa-angle-double-right"></i></a>
           </div>
         </div>
       <!-- section others end -->
